--- a/Bio.html
+++ b/Bio.html
@@ -78,11 +78,11 @@
         <div class="poster-container">
             <h2>Event Poster</h2>
             <div class="poster-wrapper">
-                <a href="images/Bio.webp" target="_blank">
-                    <img src="images/Bio.webp" alt="Think & Ink Poster">
+                <a href="images/Event/StrangerMinds.jpeg" target="_blank">
+                    <img src="images/Event/StrangerMinds.jpeg" alt="Think & Ink Poster">
                 </a>
             </div>
-            <a href="images/Bio.webp" download class="btn-secondary-action">
+            <a href="images/Event/StrangerMinds.jpeg" download class="btn-secondary-action">
                 <i class="fa fa-download"></i> Download Poster
             </a>
         </div>
